--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
-        <activity android:name=".activities.Splash" >
+        <activity android:name=".activities.SplashActivity" >
         </activity>
-        <activity android:name=".activities.Favorites" >
+        <activity android:name=".activities.FavoritesActivity" >
         </activity>
     </application>
 
