--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "peterbliss.twitterburrito"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -27,4 +27,6 @@ dependencies {
     compile files('libs/volley.jar')
     compile files('libs/realm-0.84.1.jar')
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile 'com.android.support:cardview-v7:22.0.+'
+    compile 'com.android.support:recyclerview-v7:22.0.+'
 }
