Updated the support jars

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile files('libs/realm-0.84.1.jar')
     compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.0.+'
+    compile 'com.android.support:palette-v7:22.2.0'
 }
